--- a/examples/unfinished/jsparse-demo/jsparse-demo.html
+++ b/examples/unfinished/jsparse-demo/jsparse-demo.html
@@ -16,10 +16,10 @@
     </div>
   </div>
   <div id="main">
-    <div id="inputarea">
-{{! whitespace is significant here; browser swallows initial
-    newline in textarea }}
-<textarea>
+    <div id="inputarea">{{!
+whitespace is significant here; browser swallows initial
+    newline in textarea
+}}<textarea>
 {{input}}</textarea>
     </div>
     <div id="output">
